# portable-decoder

./: .gitignore  CMakeLists.txt  README.md  blas-wrapper.h  fft-computer.cc  fft-computer.h  io.cc  io.h  logger.h  math.cc  math.h  signal.cc  signal.h  simple-fst.cc  simple-fst.h  test-fft-computer.cc  test-io.cc  test-wave.cc  type.h  wave.cc  wave.h
decoder/: CMakeLists.txt  blas-wrapper.h  common.h  config.cc  config.h  decoder.cc  decoder.h  fft-computer.cc  fft-computer.h  hash-list-inl.h  hash-list.h  holder.h  io.cc  io.h  logger.h  math.cc  math.h  online.cc  online.h  signal.cc  signal.h  simple-fst.cc  simple-fst.h  timer.h  transition-table.h  type.h  wave.cc  wave.h
kaldi-tools/: CMakeLists.txt  copy-decode-graph.cc  copy-nnet3-linear-params.cc  copy-tid-to-pdf.cc  copy-transition-table.cc
python/: README.md  _pydecoder.pxd  _pydecoder.pyx  build.sh  decode_demo.py  decoder.py  egs.py  fft.pyx  install.sh  loglike_decode_demo.py  mfcc.conf  post_decode_demo.py  pydecoder.pxd  pydecoder.py  pydecoder.pyx  setup.py  tdnn.py  typedef.pxd  validate_extractor.py  validate_tdnn_output.py  wav_decode_demo.py
python/example/: loglike_decode_demo.py  utils.py  validate_tdnn_output.py  wav_decode_demo.py
python/example/kaldi_helper/: tdnn.py
python/kaldi_raw_tdnn/: tdnn.py
test/: CMakeLists.txt  test-configure.cc  test-decoder.cc  test-feature.cc  test-fft-computer.cc  test-holder.cc  test-io.cc  test-logger.cc  test-online.cc  test-read-archive.cc  test-simple-fst.cc  test-transition-table.cc  test-wave.cc
